# InternetShop

./: README.md  pyproject.toml
internet_shop/cart/: cart.py  forms.py  urls.py  views.py
internet_shop/internet_shop/: celery.py  settings.py  urls.py
internet_shop/orders/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
internet_shop/shop/: admin.py  models.py  urls.py  views.py
internet_shop/shop/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_category_date_created_category_date_modified_and_more.py
internet_shop/static/css/: common.css  style.css
internet_shop/templates/: base.html  cart_details.html  index.html  order_create.html  product.html  products.html
internet_shop/templates/account/: login.html  logout.html  signup.html
internet_shop/templates/flatpages/: default.html
