[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = ["san <deadcove@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
django-allauth = "^0.61.1"
celery = "^5.3.6"
drf-spectacular = "^0.27.1"
pillow = "^10.2.0"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
